--- a/mortgages_note.qmd
+++ b/mortgages_note.qmd
@@ -1,5 +1,8 @@
 ---
-format: docx 
+format:
+  docx:
+    reference-doc: new_template_no_numbering.docx
+  pdf: default
 monofont: "DejaVu Sans Mono"
 mainfont: "Times New Roman"
 execute: 
@@ -9,7 +12,7 @@ editor: source
 bibliography: references.bib
 biblio-style: apalike
 natbiboptions: round
-link-citations: true
+link-citations: false
 linkcolor: blue!000!black
 urlcolor: blue!000!black
 citecolor: blue!000!black
@@ -68,16 +71,232 @@ set_flextable_defaults(font.size = 7,
 ```
 
 # Introduction
+Mortgage loans are considered biggest expenditure for most households. This suggests that mortgages play a key role in the transmission of monetary policy. This is especially true in systems where ARMs (adjustable-rate mortgage) are more dominant compared to FRMs (fixed rate mortgages). ARMs are more sensitive to interest rate changes thus any increase in mortgage payments decreases household disposable income. Thus, an increase in the repo rate can lead to an increase in mortgage payments for borrowers who hold ARMs. Moreover, the allocation of interest-rate risk between the banking sector and the real sector differs across countries, with direct consequences for financial stability. Therefore, investigating the determinants of the prevalent type (ARM vs FRM) of mortgage in South Africa over time is crucial.
 
-@amzallag2019monetary
 
-@oecd2021brick
+# Exploring ARMs versus FRMs
 
-# Experiences from other countries
+## Background
+A fixed rate mortgage can be referred to as a mortgage where the borrower is guaranteed a fixed rate over the duration of the mortgage. On the other hand, the adjustable-rate mortgage has an interest rate that fluctuates over time based on the existing market rate. 
 
-# South African experience
+Literature suggests that demand and supply factors drive the choice between ARMs and FRMs. On the demand side borrowers financial condition plays a significant role.  @baesel1980allocation support this statement with their analysis of the considerations borrowers make between fixed versus index-linked mortgages. They found that borrower’s choice of mortgage depends on current the relationship between future income and inflation. 
+
+@statman1982fixed, agrees with @baesel1980allocation  that borrower’s preferences for fixed rate or index-linked mortgages depend on the relationship between the rate of changes in income and the rate of inflation. However, @statman1982fixed adds that borrowers preferences also depend on the relationship between changes in the net value of houses and the rate of inflation.
+
+This is supported by the work of @campbell2003household who derive relevant theoretical predictions by treating mortgage choice as a problem in household risk management. In their framework, households with low income and low levels of saving are likely to choose the loan with the lowest interest rate. This tends to be an adjustable-rate mortgage as a fixed rate mortgage often includes a term premium and the cost of the prepayment option. @campbell2003household build on this by arguing that the form of the mortgage contract can have significant effects on household welfare and asked how a household should make the choice between FRM and ARM. Their findings showed that homeowners with smaller houses relative to income, more stable income, lower risk aversion, more lenient treatment in bankruptcy, and a higher probability of moving should find ARMs more attractive. A further argument for ARMs is provided by @cocco2013evidence who states that one the biggest advantages of an adjustable-rate mortgage is the ability of borrowers to make limited payments in certain instances (when resources are low), compensating in periods when their resources are abundant [@cocco2013evidence].
+
+This heavy depends on homeowners being properly informed. Research by @paiella2007choosing examined whether households can accurately assess their circumstances in terms of (non-mortgage related) risk exposure and make an appropriate choice of either a FRM or ARM. They showed that household characteristics are irrelevant for the choice of mortgage. 
+
+The choice between a fixed and adjustable mortgage was largely based on whether households faced liquidity constraints. Households that face liquidity constraints tend to favour ARMs because they have lower initial payments. These households tend to overlook the overall cost of the mortgage and  @paiella2007choosing argue that they do not fully consider the risk of a rise in the reference interest rate. Lenders on the other hand price the risk too high and borrowers end up paying a higher price for the benefit of the lower initial payments.
+
+@campbell2006household use the American Housing Survey to show evidence that mortgage borrowers make several mistakes that leads to important implications for equilibrium in the mortgage market. For example, he finds that the decision to refinance FRM is challenging for many households, particularly poorer and less educated ones, and therefore they pay higher mortgage rates than necessary.
+
+@kim2016borrower expand on this with their research paper documenting the relationship between the perceived borrower’s risk and the choice between undertaking an adjustable or a fixed rate mortgage. They discover that during high (low) short-term interest rate environments, borrowers perceive a low (high) probability of rate increases (decreases). This explained their desire for ARMs over FRMs. Hence, the desire for ARMs (FRMs). However, they found that during a down housing market borrowers tended to avoid ARMs due to an increased perceived risk.
+
+However, a disadvantage of an ARM is that it exposes borrowers to the income risk of short-term variability in the periodic payments resulting in households who cannot afford to take this risk (for example in case of high loan-to-income ratio and low financial wealth) opting for an FRM instead. These findings are validated by empirical papers by [@paiella2007choosing; @fornero2011effect; @ehrmann2017mortgage] 
+
+Another factor that plays a key role in mortgage choice is the financial literacy of borrowers [@gathergood2017financial; @fornero2011effect; @agarwal2012adverse].  Findings suggest that more educated borrowers understand that FRMs are more expensive than ARMs due to the term premium and the cost of the prepayment option. They are also aware of the potential risks that come with ARMs [@fornero2011effect].
+
+On the supply side, factors such as bank funding and liquidity constraints determine the type of loan offered. Research by @fuster2015securitization, and @basten2017banks shows it is the lower bank bond spreads, lower deposit pass-through, lower exposure to interest rate risk and higher access to securitization make that made banks more prone to offer fixed rate loans.
+
+Offering flexible rate mortgages for banks has been shown to have a positive impact on a banks uptake of mortgages. An example of this is given by @cocco2013evidence who utilized a specialized mortgage program marketed by a U.S bank to certain borrowers during 2004 and 2005. The bank in the study offered different versions of option adjustable-rate mortgages that allowed for negative amortization. @cocco2013evidence found that offering the program led to a more than 35 percent increase in the bank’s mortgage originations volume.
+
+This is due to the bank in the study offering different versions of option adjusted rate mortgages that allowed for negative amortization. This offered significant flexibility to borrowers leading to their popularity during the housing boom form 2006. An increase by 12 to 40 percent was observed in some well performing markets [@piskorski2010optimal; @krainer2014mortgage].
+
+Offering flexibility comes with significant loan performance costs for the bank, though this is not immediately apparent from a casual analysis [@cocco2013evidence]. Flexible loans exhibit lower delinquency risks, controlling for observable borrower and transaction characteristics. This result, however, may be driven by unobserved borrower characteristics.
+
+Finally, there are other macroeconomic factors such as current and future expected interest rates as well as the unemployment rate and the macroeconomic history of a country that influence mortgage choice.
+
+## Monetary policy transmission
+
+According to @mishkin2007housing monetary policy affects the housing market directly or indirectly through the following channels. Direct effects  can be user cost of capital, expectations of future house-price movements, and housing supply. Indirect effects are the standard wealth effects from housing prices, balance sheet, credit-channel effects on consumer spending, and balance sheet, credit-channel effects on housing demand.
+
+Through these channels the increase or decrease in the policy rate can impact mortgages with flexible more than those with fixed rates. This is evidenced by @garriga2017mortgages who found that the transmission mechanism is stronger under adjustable- than fixed-rate mortgages. They found that the real effects of the nominal shock turned out to be stronger under an ARM than an FRM [@garriga2017mortgages].
+
+
+
+## Interest rate passthrough
+Some of the factors that affect homeowners average interest rate on fixed rate mortgages include refinancing, entry channel and exit channel. Refinancing of fixed-rate mortgages to mortgages with lower interest rates have contributed to a significant part of the decrease in homeowners’ average interest rate since the financial crisis. The entry channel comprises borrowers who raise new fixed-rate debt at the market rate. New lending occurs in connection with relocations, switching from other loan types and borrowers who for the first time enter the housing market. The exit channel comprises borrowers with existing fixed-rate mortgages who repay the debt by instalments or terminate their loans without refinancing. Terminations typically cover relocations, switching to other loan types and foreclosure auctions.
+
+
+# Experiences from the rest of the world
+In contrast to South Africa and many countries, in the United States 80% of mortgages have fixed rates. @botsch2023long link this to the long-lasting effects of the Great Depression. This points to personal experiences with interest rates having an impact on interest rate expectations and mortgage choices. 
+
+@botsch2023long link this to the long-lasting effects of the Great Inflation. Personal experiences with interest rates affect interest rate expectations and mortgage choices. This is consistent with the idea that historically high inflation rates can predict the prevalence of fixed mortgages internationally.
+
+Despite the recent domination of fixed interest rates in the US, before the 1930s variable rates were the dominant type of mortgage. It was due to the Great depression that many borrowers defaulted on their payments. Following these policies to purchase long-term rate mortgages from banks so that lenders can shed the interest rate risk associated with holding these assets to maturity resulting in the dominance of FRM for the next 40 years.
+
+
+## Australia
+Australia’s mortgage market differs from the United States and other countries in the sense that the mortgage market transactions are not influenced by institutional structures such as Fannie Mac and Freddie Mac in the USA, government mortgage insurance as seen in the Netherlands and government security guarantees in Japan and Canada [@campbell2006household; @frame2005fussing].
+
+@dungey2015mortgage state that securitization in Australia plays a minimal role in securing funds for major banks. They also mention that there is strong prudential regulation, but no public mortgage insurance scheme and that no government deposit guarantee existed prior to the impact of the financial crisis in 2008-2009. 
+
+Like South Africa, Australia’s mortgage is dominated by ARMs. But Australia’s market is characterized by a credit frontier loan written for terms up to 30 years, with the interest rate adjustable with the discretion of the bank.
+
+In Australia borrowers consider the initial interest rate and implicitly the loan amount they can access when choosing a mortgage product @dungey2018endogeneity. @dungey2018endogeneity show that the role of borrower characteristics is insignificant in determining mortgage choice directly and indirectly, through loan size and interest rate determination.
+
+In short, @dungey2018endogeneity finding reveal the potential effects of monetary policy transmission coupled with macro- and micro-prudential regulation. They show that borrowers' mortgage risk choices are mainly determined by mortgage prices and mortgage terms – such as loan size, market conditions and borrower characteristics.
+
+
+## Italy
+In Italy both demand and supply factors explain mortgage choice. On the demand side, a reduction in interest rates leads to an increase in the number of households holding a mortgage. On the supply side, the authors claim there is a positive corelation between the number of bank branches in a province and mortgages. Thus, there is significant probability that inhabitants will hold a mortgage due to bank diffusion and competition. Their results show evidence consistent with the hypothesis that ARMs are more attractive for households that are currently facing a liquidity constraint.
+
+Additionally, they show that one of the most important factors that influence their preference for ARMs is the high value they attribute to the level of the initial payment. (Lower than FRM).
+On the lenders side, they price the risk of high interest rates expensively leading to borrowers paying a high price for the benefit of low initial payments. Thus, banks tend to take less risk when offering rates while borrowers don’t fully consider the risk of the rise in the interest rate.
+
+## Denmark
+Denmark’s mortgage environment consists of at least half of the mortgages taken on fixed rates thus fixed rate mortgages constitute a large proportion of the Danes’ debt (Denmark's national bank). The result of this is that in theory an interest rate decrease will only result in lower current financing costs for homeowners with fixed-rate mortgages if they prepay their existing loans and raise new loans with lower rates.
+
+Fixed rates in Denmark can be refinanced without the outstanding debt being significantly increased making refinancing attractive when interest rates decrease. The refinancing to lower interest rates has boosted the impact on how quickly a change in interest rates has passed to homeowners’ mortgage rates. This has been particularly evident during waves of refinancing. Approximately means that it takes five years for a 1 percent interest rate change to have a pass-through of 90 per cent, while it takes 6.2 years for an interest rate change to have a pass-through of 95 per cent for periods after major market rate decreases. Refinancing of fixed-rate mortgages has thus supported the transmission of monetary policy rates to homeowners’ budgets making policy rates particularly effective regardless of the mortgages not being ARMs like in South Africa.
+
+On reason for this is that Danish fixed rate mortgages are special because borrowers can always redeem the loan at price 100 and thus refinance the loan without incurring a significant increase in the outstanding debt. Homeowners are thus protected from ending up with debt that is expensive to repurchase in connection with interest rate decreases. Providing a major reason why the Danish choose to finance their mortgages with fixed rates.
+
+## Euro Area
+In the euro area, fixed rate mortgages (FRMs) are dominant in Belgium, France, Germany and the Netherlands. While adjustable-rate mortgages (ARMs) are prevailing in Austria, Greece, Italy, Portugal, and Spain. A study 12 countries claims that demand factors explain much of the total variation in the share of FRMs. A smaller portion, below 19% were associated with bank supply factors. The remaining 9% wasn't able to be explained.
+
+In the 12 countries studied the demand side of the ARMs was found to be positively influenced by the following factors. Firstly, a historically high inflation volatility, and secondly a relatively high degree of economic and financial literacy. Thirdly, the absence of regulations to facilitate the use of such loans as collateral for bank funding instruments, such as covered bonds and MBS, and lastly a marked negative correlation between the unemployment rate and short-term interest rates.
+
+When it comes to FRMs the @albertazzi2019fixed concludes that at least part of the heterogeneity in the share of fixed rate mortgages across economies seems to reflect an optimal allocation of interest rate risk, given the differences in their business cycles and the expectations that monetary policy will operate in a way that stabilizes disposable income after housing costs were considered.
+
+Additionally, the variation in the share of FRMs to total new mortgages differs across countries as well, with little variation over time in Germany and Portugal, but far more in Italy and Greece [@albertazzi2019fixed]. This suggest that there is monetary policy transmission heterogeneity across countries.
+
+
+
+```{r}
+#| label: tbl-summary
+#| tbl-cap: "Summary of the international experience"
+#| ft.arraystretch: 0.5
+
+tibble(
+  "Country" = c("USA", "Italy", "Germany", "Spain", "United Kingdom", "France"),
+  "Mortgage" = c("FRMs", "Both", "FRM", "ARM with recent surge of FRM", "FRM", "FRM"),
+  "Reason for choice" = c(
+    "The prevalence of FRM can be explained by the lasting effects of the great inflation. Experience of high interest rates affected interest rate expectations and mortgage choices (Botsch and Malmendier, 2023)",
+    "The choice mostly depends on the price of the mortgage and the liquidity of the household.",
+    "The sophisticated rental market enables households to save their own funds for house purchases (Voigtlander, 2014)",
+    "Since the 90’s ARM was preferred until contracts included upwards and downward limits leading to an increase in FRM (Gomez-pomar, Segura-Moreiras and Spruk, 2021)",
+    "Long term fixed mortgage rates have become cheaper than other alternatives since 2016. The cheaper borrowing cost is seen as a reason for the increase in fixed rate mortgages. (Bank of England, 2024)",
+    "There is little rate differential between ARM and FRM due to the low interest rate environment resulting in little incentive to take on an ARM (Kish, 2022)"
+  )
+) %>% 
+  flextable_word() %>% 
+  width(j = 2, width = 0.1) 
+  
+
+
+
+
+```
+
+
+
+
+# The South African mortgage market
+Housing finance in South Africa is largely determined by two factors, which include cost of funding and the lending risk in the different markets [@kajimo2006role]. Factors such as country risk, interest rate, inflation rate and rental price are some of the major variables that influence the housing market [@habanabakize2022political].
+
+However, @kajimo2006role points out that low-income groups are held back because they cannot get access to formal finance for them to build or improve houses or supplement housing subsidies to get bigger houses [@kajimo2006role]. This is an unfortunate characteristic of the housing market in South Africa that differentiates it form other more advanced economies. Additionally, most of the low-income households in South Africa are dependent on the government for house subsidies.
+
+One of the causes from the supply side is the reluctance of banks Banks to operate in the low-income group housing market, and this unwillingness causes a shortage problem in the country [@kajimo2006role]. The result is that high and middle-income groups are provided for, the banks, especially the larger banks have little engagement with the low-income groups [@kajimo2006role]. The impact of inflation was found to be mostly insignificant on the proportion of mortgages advanced to low-, middle- and high-income households in rand value but was found to be significant and negative for the proportion of mortgages advanced to middle- income households in volume. This finding is particularly important to monetary policy transmission as the South African Reserve Bank must consider the impact that inflation has on the volume of mortgages rather than the rand value.
+
+With this analysis of the south African mortgage in mind, there is a clear separation between low-income and middle-to-higher income groups further complicating the analysis of the housing market. Additionally, there is limited data showing which income group prefers what type of mortgage placing a limitation on this study. Regardless there are certain observations we can make with the data we have. This is explored in the following section of this study. First, we will go through some of the characteristics of the mortgage markets in certain countries around the world to see if there are any similarities or differences that can help understand not only South Africa’s mortgage market but the housing market in general.
+
+## The prevalence of ARMs in South Africa
+
+@fig-harm and @fig-carm display the dominance of ARMs over FRMs in South Africa’s mortgage market. For household mortgages the share of total mortgages consistently been above 90% from 2008 to 2023. 
+
+```{r}
+#| label: fig-harm
+#| fig-cap: "ARMs versus FRMs for household mortgages"
+#| fig-width: 10
+#| fig-height: 6
+
+# LOAD GRAPH 1
+
+```
+
+
+
+On the other hand, from 2008 to 2023, ARMs have been at least 80% on average for corporations. From 2008 to around late 2010 flexible mortgages were above 90%, this was followed by a decline from 2010 to 2013. One explanation for this could be the 2008/2009 financial crisis. This is consistent with findings from @kim2016borrower who state that during a down housing market borrowers tended to avoid ARMs due to an increased perceived risk. From 2013 onwards the rates remained stable around 80% until 2020 where there was an external shock in the form of Covid 19 global pandemic. 
+
+Thereafter we see the rates go back to just above 80% of the share of mortgages. But what explains the portion of fixed rate mortgages? @damen2016effect state that this is due to households’ (typically high earning)  households preference to spend a fixed fraction of their income on housing. This assists households budget their largest expense (housing) allowing for them to spend the remainder on other expenses (food, cars etc).
+
+
+
+```{r}
+#| label: fig-carm
+#| fig-cap: "ARMs versus FRMs in corporate mortgages"
+#| fig-width: 10
+#| fig-height: 6
+
+# LOAD GRAPH 2
+
+```
+
+There are two instances on the graph (2009 and late 2022) where the ARMs intersect with the FRMs. Lending rates, similarly, to deposit rates, follow the movements in the repo rate. During the COVID-19 pandemic, the weighted average lending rate has been reflecting a noticeable increase in the risk profile of borrowers following the national lockdown from March 2020, along with a visible difference between the rates for households and companies.
+
+
+# Potential Drivers
+## The repo is a driver of lending rates
+
+@nimmo2022monetary conducted a study of how changes in the repo rate (by the South African Reserve Bank) passes through to a range on household and corporate lending and deposit rates. They found that interest rate hikes are passed through mortgage interest rates more strongly than rate cuts in the long-run equilibrium. 
+
+This is depicted on Figure 3 where the household lending rate and the repo rate have a similar shape. When the repo rate dipped from 2009 to 2010 (due to the financial crisis) and again from 2020 to 2021 (due to covid) the household flexible rate followed the same pattern. However, the fixed rate had less of a pronounced dip both times. This is consistent with existing literature that states that monetary transmission is stronger in economies dominated by ARMs. 
+
+These findings suggest that flexible mortgage rates for households in South Africa are more sensitive to increases in the repo rate and that necessitates careful consideration by the central bank when implementing monetary policy.
+
+
+```{r}
+#| label: fig-repo-household
+#| fig-cap: "Household mortgage rate and the repo rate"
+#| fig-width: 10
+#| fig-height: 6
+
+# LOAD GRAPH 3
+
+```
+
+
+
+The margin (lending spread) between the lending rate to companies and the repo rate has increased much more than that for households. Flexible lending rates are more closely aligned with the repo rate than fixed rates due to the extended maturity of some agreements. Borrowing at flexible rates is also cheaper than at fixed rates, as the option of locking into fixed-rate agreements requires a premium. There is also a marked difference between rates that apply to instalment sales that are significantly higher than interest rates on mortgage loans, with the latter, on a flexible weighted average basis, priced in proximity of the prime lending rate [@meyer2022margins]. 
+
+The (changes) weighted average flexible interest rate on new loans is an early indicator of changes in lending conditions to households, in particular for instalment sale credit (mostly vehicle purchases), whereas new and existing flexible interest rates for mortgage advances have followed similar paths as banks priced on interest rate changes in similar magnitudes. However, on balance, more interest rate relief was provided on longer-term mortgage credit than on shorter-term instalment sale credit
+
+
+
+```{r}
+#| label = fig-repo-corp,
+#| fig.cap = "Corporate mortgage rates and the repo rate",
+#| fig.width = 10,
+#| fig.height = 6
+
+# LOAD GRAPH 4
+
+```
+
+
+## The influence of house prices on ARMs
+
+
+Literature suggests that house prices can significantly affect adjustable-rate mortgages. The idea is that as house prices rise households with ARM may experience increases in mortgage payments. Homeowners use this knowledge of current mortgage rates and house prices to evaluate whether they should do nothing, refinance their existing mortgage, or purchase a home with a new mortgage [@Batzer2024lockin].
+
+OECD claims that rising rates can reduce demand for housing through an expectations/risk premium channel (from change in policy interest rates to housing prices) due to the sensitivity of house prices to changes in interest rates. This in turn affects individual behaviour (for example, homeownership decisions, mortgage choices, and leverage) and hence the macroeconomy [@kuchler2023housing].
+
+
+## The effect of financial literacy in South Africa
+
+@fornero2011effect that more financially literate individuals are, i) the more likely they are to shop around and compare mortgages for better economic conditions (in contrast to the less financially literate, who tend to take on mortgages from the first financial intermediary they contact), ii) the more prepared they are to diversify risks by better connecting their risk exposure with different types of mortgage, and iii) the less likely they are to experience delays in repayments.
+
+According to @campbell2003household  the choice of the type of mortgage is, first of all, a problem of risk understanding, where exposure is conditional on market features as well as on individual characteristics (e.g., earning risk) that make a specific contract more or less suited to a household.
+
+In the case of south Africa a study was conducted that quizzed respondents about their awareness and comprehension of financial concepts such as compound interest and inflation. This study was aimed at examine the financial literature of south africans. They found that, majority the respondents were not knowledgeable on inflation. As it pertains to interet rates there seems to be a fair understanding on their impact apart from compound interest.
+respondents were quizzed about their awareness and comprehension of certain financial concepts (such as inflation and compound interest). The quiz was used to examine how South Africans understand the financial world and provides an assessment of individuals’ familiarity and proficiency of basic financial concepts.
+
+The result of the quiz shows that there is a lack of knowledge of how inflation works particularly its effects on purchasing power. These results can be used as an argument that the respondent's knowledge of the effects of inflation could impact their knowledge of how the SARB (South African Reserve Bank) uses the repo rate to combat inflation. Since it has been established that monetary policy intervention by central banks in the form of short-term interest rates can affect the variable mortgage rate and ultimately the purchasing power of households.
+
+However, majority of respondents were shown to have a good knowledge of interest rates except when it comes to compound interest. Regardless, it can be assumed the respondents understand that an increase in the interest rate impacts the amount they must pay back to loaners. This suggests that households may have sufficient knowledge to differentiate between high rates and low rates of interest and therefore can make an informed decision when choosing the rate of interest to pay on their loans.
 
 # Conclusion
 
-
+\newpage
 # References
